--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,34 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#cuisine_scrollbar::-webkit-scrollbar {
+  display: none;
+}
+#helpLegal::-webkit-scrollbar {
+  display: none;
+}
+#cuisine_scrollbar > img:hover {
+  cursor: pointer;
+}
+
+
+
+
+@keyframes slide-animation {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.animate-slide-animation {
+  animation: slide-animation 0.5s ease-in-out;
+}
+
+
+
+
+
